Wed Oct 16 10:55:11 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/config-linux-common.h: Added support for ACE_CC_NAME,
	  ACE_CC_MAJOR_VERSION and ACE_CC_MINOR_VERSION for linux. Thanks
	  to Jaroslaw Nozderko <jaroslaw.nozderko@polkomtel.com.pl> for
	  suggesting this. 

Wed Oct 16 10:55:44 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/config-win32-msvc.h (ACE_HAS_ALLOCA): Enabled alloca support
	  for MSVC. Thanks to Pat McNertney <pat@mcnerthney.com> for
	  providing the patch.

Tue Oct 15 18:49:25 2002  Stephen Torri <storri@cse.wustl.edu>

	* tests/Recursive_Condition_Test.cpp:

	  Added two tests.
	  Test 2: repeat of test 1 but with a 2 second delay
	  after main thread signals the waiting thread. (Works)
	  Test 3: repeat of test 1 but with 4 threads waiting
	  on the condition variable. (Broken - no threads 
	  awaken).

Tue Oct 15 17:27:34 2002  Krishnakumar B  <kitty@cse.wustl.edu>

        * ACEXML/docs/bugs.txt:
        * ACEXML/docs/TODO.txt:

          Updated to reflect the current status.

Tue Oct 15 17:23:43 2002  Krishnakumar B  <kitty@cse.wustl.edu>

        * tests/Service_Config_Test.UTF-16.conf.xml: New file added which
          is used in Service_Config_Test when ACE_HAS_XML_SVC_CONF and
          ACE_USES_WCHAR is enabled.

Tue Oct 15 17:17:44 2002  Krishnakumar B  <kitty@cse.wustl.edu>

        * ACEXML/common/Encoding.cpp:
        * ACEXML/common/Encoding.h:

          New files which handle the automatic detection of encoding in
          XML files.

        * ACEXML/apps/svcconf/Makefile:
        * ACEXML/common/CharStream.h:
        * ACEXML/common/Exception.cpp:
        * ACEXML/common/FileCharStream.cpp:
        * ACEXML/common/FileCharStream.h:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/HttpCharStream.h:
        * ACEXML/common/InputSource.cpp:
        * ACEXML/common/Makefile:
        * ACEXML/common/Mem_Map_Stream.cpp: